--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,11 @@
 	</properties>
 	<dependencies>
 
-		<dependency>
+        <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+        <dependency>
 			<groupId>org.webjars.bower</groupId>
 			<artifactId>jquery</artifactId>
 			<version>3.6.1</version>
