--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,12 @@
 		<java.version>11</java.version>
 	</properties>
 	<dependencies>
-
+       
+	    <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>jquery-mask-plugin</artifactId>
+            <version>1.14.16</version>
+        </dependency>
         <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
